--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
+
 body{
     font-family: 'Lato', sans-serif;
-
+    
 
 }
 
 h3{
     font-family: 'Open Sans', sans-serif;
+    margin-top:0 ;
 }
 nav{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 0px 200px;
+
 }
 .text-primary{
     color: #FD6E0A;
@@ -16,6 +23,14 @@ nav{
 .btn-primary{
     border-radius: 5px;
 background: #FD6E0A;
+border-radius: 0;
+color: var(--White-Color, #FFF);
+font-family: Open Sans;
+font-size: 20px;
+
+font-weight: 700;
+padding:15px  34px ;
+margin-top: 0;
 }
 .nav-title{
     color: var(--Dark-01, #181818);
@@ -28,14 +43,31 @@ font-weight: 800;
 }
 nav>ul{
     display: flex;
+    align-items: center;
+    margin-top: 0;
   
 }
 nav li{
     list-style: none;
   margin: 50px;
 
+ 
+
 }
 nav a{
     text-decoration: none;
     color: var(--Dark-02, #474747);
+}
+/* header section style */
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+
+}
+.banner.profile{
+    width: 500px;
 }
