--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ text-align: center;
 
 font-size: 18px;
 }
+.main{
+max-width: 1140px;
+margin: 0 auto;
+}
 
 /* about section style */
 .about{
@@ -124,3 +128,28 @@ font-size: 18px;
     background: #FFF8F3;
     margin: 130px 0;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+.info-title{
+    color: var(--Dark-03, #757575);
+text-align: center;
+font-family: Open Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 10px;
+
+
+}
+.about-description{
+    color: var(--Dark-02, #474747);
+font-family: Open Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: 10px;
