--- a/style.css
+++ b/style.css
@@ -153,3 +153,10 @@ font-size: 20px;
 font-style: normal;
 font-weight: 700;
 line-height: 10px;
+}
+.what-i-do-description{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+}
