--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ border-radius: 0;
 color: var(--White-Color, #FFF);
 font-family: Open Sans;
 font-size: 20px;
-
+border-radius: 5px;
 font-weight: 700;
 padding:15px  34px ;
 margin-top: 0;
@@ -120,6 +120,9 @@ font-size: 18px;
 max-width: 1140px;
 margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section style */
 .about{
@@ -159,4 +162,46 @@ line-height: 10px;
 }
 .skills-container{
     display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color:  #757575;
+}
+/* resume section style */
+.resume-column-title{
+    color:  #474747;
+font-size: 30px;
+font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-iteam-description, .resume-iteam-institute{
+    color:  #757575;
+
+}
+.resume-iteam-institute{
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+.resume-iteam-title{
+    color: var(--Dark-02, #474747);
+font-family: Open Sans;
+font-size: 25px;
+margin-bottom: 10px;
+}
+.resume-container hr{
+    margin: 30px;
+}
+#dawnload-cv{
+    text-align: center;
+    margin-top: 50px;
 }
