--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ border-radius: 5px;
 font-weight: 700;
 padding:15px  34px ;
 margin-top: 0;
+
 }
 .nav-title{
     color: var(--Dark-01, #181818);
@@ -64,9 +65,9 @@ nav a{
 #header{
     background: #FFF8F3;
 
-    background-image: url('images/header_bg.png');
+    background-image: url('images/header_bg.png'), url('images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 .banner{
     padding: 30px 30px 0px 150px;
